--- a/manhole/src/main/res/layout/manhole_layout_crash_detail.xml
+++ b/manhole/src/main/res/layout/manhole_layout_crash_detail.xml
@@ -16,15 +16,26 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/manhole_tvDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/manhole_black"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="@id/manhole_tvName"
-        app:layout_constraintTop_toBottomOf="@id/manhole_tvName" />
+    <androidx.core.widget.NestedScrollView
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/manhole_tvName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp">
+
+        <TextView
+            android:id="@+id/manhole_tvDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/manhole_black"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="@id/manhole_tvName"
+            app:layout_constraintTop_toBottomOf="@id/manhole_tvName" />
+
+    </androidx.core.widget.NestedScrollView>
+
 
     <TextView
         android:id="@+id/manhole_tvClose"
