--- a/app_moxy/src/main/res/layout/activity_main.xml
+++ b/app_moxy/src/main/res/layout/activity_main.xml
@@ -79,5 +79,10 @@
         android:text="jump"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btnWipe"
+        android:text="test wipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
